change in Property folder

--- a/backendObfuscated/config.env
+++ b/backendObfuscated/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_LOCAL=mongodb://127.0.0.1:27017/HomelyHub
+DATABASE_LOCAL=mongodb+srv://ramsaiandhavarapu07:Chitti*8989@ramsai07.0o6j6f3.mongodb.net/HomelyHub
 
 
 JWT_SECRET=my-super-duper-secret-is-not-revealed-baby  #32 characters long
